--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,19 @@
-<body>
-  <!-- Fonts to support Material Design -->
-  <link
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <!-- Fonts to support Material Design -->
+    <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-  />
-  <!-- Icons to support Material Design -->
-  <link
+    />
+    <!-- Icons to support Material Design -->
+    <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
-  />
-  <div id="root"></div>
-</body>
+    />
+    <div id="root"></div>
+  </body>
+</html>
