--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,11 @@
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <div id="root"></div>
+    <style>
+      html, body, #root, #root>div {
+        height: 100%;
+        margin: 0;
+      }
+    </style>
   </body>
 </html>
